<resources>
    <string name="AccountTitle">حساب من</string>
    <string name="AccountEdit">ویرایش</string>
    <string name="AccountLogOutDialogTitle">خروج از حساب.</string>
    <string name="AccountLogOutDialogDescription">ایا تمایل به خروج از حساب خود را دارید؟</string>
    <string name="AccountLogOutDialogPositive">خروج</string>
    <string name="AccountLogOutDialogNegative">بستن</string>
    <string name="AppName">ریسلو دیباگ</string>
    <string name="AppLoading">در حال بارگذاری …</string>
    <string name="AppInfoError">مشکل ارتباط با سرور! تلاش مجدد</string>
    <string name="AppInfoConnection">انترنت وصل نیست! تلاش مجدد</string>
    <string name="AppInfoEmpty">موردی برای نمایش موجود نیست.</string>
    <string name="AppSearchInput">جستجو</string>
    <string name="AppSearchEmpty">موردی یافت نشد</string>
    <string name="AppSearchConfirm">ثبت</string>
    <string name="AppImageContent">عکس</string>
    <string name="SplashLoading">در حال بارگذاری</string>
    <string name="SplashUpdateDialogForceDescription">این یک به روز رسانی اجباری است و برای استفاده از برنامه لطفا هم اکنون به روز رسانی کنید.</string>
    <string name="SplashUpdateDialogForcePositive">به روز رسانی</string>
    <string name="SplashUpdateDialogForceNegative">خروج از برنامه</string>
    <string name="SplashUpdateDialogNotForceDescription">این یک به روز رسانی اجباری نیست و شما می توانید اکنون یا بعدن به روز رسانی کنید.</string>
    <string name="SplashUpdateDialogNotForcePositive">به روز رسانی</string>
    <string name="SplashUpdateDialogNotForceNegative">ادامه با این نسخه</string>
    <string name="IntroTitleOne">ریسلو</string>
    <string name="IntroTitleTwo">آزمون‌</string>
    <string name="IntroTitleThree">اداره مراکز درمان</string>
    <string name="IntroTitleFour">همیار پژوهش و آموزش</string>
    <string name="IntroDescriptionOne">بستری یک‌پارچه که کارهای روان‌شناس را در سه حوزه درمان، آموزش و پژوهش تسهیل می‌کند.</string>
    <string name="IntroDescriptionTwo">آزمون روان‌شناختی مورد نیاز خود را انتخاب کنید و به آسانی آن را اجرا کرده، نمره‌گذاری و تفسیر آن را در اختیار داشته باشید.</string>
    <string name="IntroDescriptionThree">برنامه‌ریزی‌ کارهای مراکز درمان خود را با ریسلو انجام داده و دغدغه آن‌ها را نداشته باشید.</string>
    <string name="IntroDescriptionFour">کارهای  پژوهشی و علمی خود را به راحتی در بستری یک‌پارچه ساماندهی کنید.</string>
    <string name="IntroNext">بعدی</string>
    <string name="IntroSkip">رد شدن</string>
    <string name="IntroStart">شروع</string>
    <string name="SettingTitle">تنظمیات</string>
    <string name="SettingAboutUs">درباره ما</string>
    <string name="SettingFAQuestion">سؤالات متداول</string>
    <string name="SettingTACondition">قوانین و مقررات</string>
    <string name="SettingCallUs">ارتباط با ما</string>
    <string name="SettingFollow">دنبال کردن</string>
    <string name="SettingShare">اشتراک گذاری</string>
    <string name="SettingRate">نظرسنجی</string>
    <string name="SettingVersion">نسخه</string>
    <string name="SettingArrived">رسید</string>
    <string name="SettingUpdate">به روز رسانی</string>
    <string name="SettingNew">نسخه جدید</string>
    <string name="SettingShareLink">https://play.google.com/store/apps/details?id=com.majazeh.risloo</string>
    <string name="SettingShareChooser">اشتراک گذاری برنامه</string>
    <string name="SettingLinkTelegram">risloo_ir</string>
    <string name="SettingLinkInstagram">risloo_ir</string>
    <string name="SettingLinkFacebook">100053471781226</string>
    <string name="SettingLinkTwitter">risloo_ir</string>
    <string name="SettingFollowDialogTitle">ما را در شبکه‌های اجتماعی دنبال کنید.</string>
    <string name="SettingFollowDialogTelegram">تلگرام</string>
    <string name="SettingFollowDialogInstagram">اینستگرام</string>
    <string name="SettingFollowDialogFacebook">فیسبوک</string>
    <string name="SettingFollowDialogTwitter">توییتر</string>
    <string name="SettingFollowDialogClose">بستن</string>
    <string name="SettingNoUpdateDialogDescription">شما آخرین نسخه ریسلو را دارید. در صورت وجود نسخه جدید به شما اطلاع داده خواهد شد.</string>
    <string name="SettingNoUpdateDialogConfirm">بستن</string>
    <string name="SettingAvailableUpdateDialogDescription">برای استفاده بهتر از ریسلو لطفا بروز رسانی کنید. همیشه در تلاشیم که بهترین خدمات به شما إرائه دهیم.</string>
    <string name="SettingAvailableUpdateDialogPositive">به روز رسانی</string>
    <string name="SettingAvailableUpdateDialogNegative">بستن</string>
    <string name="AboutUsTitle">درباره ما</string>
    <string name="FAQuestionTitle">سؤالات متداول</string>
    <string name="TAConditionTitle">قوانین و مقررات</string>
    <string name="CallUsTitle">ارتباط با ما</string>
    <string name="CallUsName">نام و نام خانوادگی</string>
    <string name="CallUsMobile">شماره موبایل</string>
    <string name="CallUsMessage">محتوای پیام شما</string>
    <string name="CallUsSend">ارسال پیام</string>
    <string name="CallUsInfoDialogTitle">کاربر گرامی!</string>
    <string name="CallUsInfoDialogDescription">شما می توانید نظرات و انتقادات خود را نسبت به خدمات و سرویس به ما اطلاع دعید. هدف ما جلب رضایت و اعتماد متقابل شما می باشد.</string>
    <string name="CallUsInfoDialogConfirm">بستن</string>
    <string name="CallUsRepeatDialogTitle">پیام شما ارسال شد.</string>
    <string name="CallUsRepeatDialogDescription">اپراتور‌های ما در اسرع وقت پیام شما را بررسی خواهند داد.</string>
    <string name="CallUsRepeatDialogPositive">پیام جدید</string>
    <string name="CallUsRepeatDialogNegative">خروج</string>
    <string name="EditAccountTitle">ویرایش من</string>
    <string name="EditAccountPersonal">شخصی</string>
    <string name="EditAccountPassword">کلمه عبور</string>
    <string name="EditAccountAvatar">تصویر</string>
    <string name="EditAccountCrypto">کلید عمومی</string>
    <string name="EditAccountEdit">ویرایش</string>
    <string name="EditPersonalNameHint">نام و نام خانوادگی</string>
    <string name="EditPersonalUsernameHint">شناسه کاربری</string>
    <string name="EditPersonalMobileHint">شماره همراه</string>
    <string name="EditPersonalEmailHint">ایمیل</string>
    <string name="EditPersonalBirthdayHint">تاریخ تولد</string>
    <string name="EditPersonalBirthdayDefault">1400-01-01</string>
    <string name="EditPersonalBirthdayDialogTitle">تاریخ تولد خودتان را انتخاب کنید.</string>
    <string name="EditPersonalBirthdayDialogPositive">ثبت</string>
    <string name="EditPersonalBirthdayDialogNegative">بستن</string>
    <string name="EditPersonalGenderMale">مرد</string>
    <string name="EditPersonalGenderFemale">زن</string>
    <string name="EditPersonalStatusActive">فعال</string>
    <string name="EditPersonalStatusWaiting">در انتظار</string>
    <string name="EditPersonalStatusClosed">بسته شده</string>
    <string name="EditPersonalTypeAdmin">ادمین</string>
    <string name="EditPersonalTypePsychology">مشاور</string>
    <string name="EditPersonalTypeOperator">اپراتور</string>
    <string name="EditPersonalTypeClinicCenter">مرکز درمان</string>
    <string name="EditPersonalTypeClient">مراجع</string>
    <string name="EditPasswordHint">کلمه عبور</string>
    <string name="EditAvatarImageDialogTitle">از کجا می خوای عکس بیارید؟</string>
    <string name="EditAvatarImageDialogGallery">البوم</string>
    <string name="EditAvatarImageDialogCamera">دوربین</string>
    <string name="EditAvatarImageDialogClose">بستن</string>
    <string name="EditCryptoPublicKeyHint">کلید عمومی</string>
    <string name="EditCryptoPrivateKeyHint">کلید خصوصی</string>
    <string name="OutroTitle">نمونه شما با موفقیت تکمیل شد!</string>
    <string name="OutroDescription">برای اطلاع دادن ریسلو از نتایج نمونه شما لازم است که فایل نمونه را بصورت انترنتی یا پیامکی ارسال نمایید.</string>
    <string name="OutroInternet">ارسال إینترنتی نمونه به ریسلو</string>
    <string name="OutroSMS">ارسال پیامکی نمونه به ریسلو</string>
    <string name="OutroDownload">دریافت فایل نمونه</string>
    <string name="OutroLater">بعدن ارسال کنم</string>
    <string name="OutroInternetDialogTitle">ارسال إینترنتی</string>
    <string name="OutroInternetDialogDescription">نتایج نمونه شما از طریق اینترنت به ریسلو ارسال می شود و سپس می توانید نمونه جدیدی را شروع کنید.</string>
    <string name="OutroInternetDialogPositive">ارسال</string>
    <string name="OutroInternetDialogNegative">بستن</string>
    <string name="OutroSMSDialogTitle">ارسال پیامکی</string>
    <string name="OutroSMSDialogDescription">نتایج نمونه شما از طریق پیامک به ریسلو ارسال می شود در نظر داشته باشید که تعداد پیامک های ارسالی شما به حجم فایل نمونه بستگی دارد.</string>
    <string name="OutroSMSDialogPositive">ارسال</string>
    <string name="OutroSMSDialogNegative">بستن</string>
    <string name="OutroDownloadDialogTitle">دریافت فایل</string>
    <string name="OutroDownloadDialogDescription">با دریافت فایل نمونه شما می توانید بعدن بصورت دستی در اختیار ریسلو از راه آپلود دادن قرار دهید.</string>
    <string name="OutroDownloadDialogPositive">دریافت</string>
    <string name="OutroDownloadDialogNegative">بستن</string>
    <string name="AuthUserId">شماره کاربری</string>
    <string name="AuthUserIdDefault">نامشخص</string>
    <string name="AuthUsername">شناسه کاربری</string>
    <string name="AuthUsernameDefault">نامشخص</string>
    <string name="AuthName">نام و نام خانوادگی</string>
    <string name="AuthNameDefault">نامشخص</string>
    <string name="AuthGender">جنسیت</string>
    <string name="AuthGenderMale">مرد</string>
    <string name="AuthGenderFemale">زن</string>
    <string name="AuthGenderDefault">نامشخص</string>
    <string name="AuthStatus">وضعیت</string>
    <string name="AuthStatusActive">فعال</string>
    <string name="AuthStatusWaiting">در انتظار</string>
    <string name="AuthStatusClosed">بسته شده</string>
    <string name="AuthStatusDefault">نامشخص</string>
    <string name="AuthType">نوع</string>
    <string name="AuthTypeAdmin">ادمین</string>
    <string name="AuthTypePsychology">مشاور</string>
    <string name="AuthTypeOperator">اپراتور</string>
    <string name="AuthTypeClinicCenter">مرکز درمان</string>
    <string name="AuthTypeClient">مراجع</string>
    <string name="AuthTypeDefault">نامشخص</string>
    <string name="AuthMobile">شماره همراه</string>
    <string name="AuthMobileDefault">نامشخص</string>
    <string name="AuthEmail">ایمیل</string>
    <string name="AuthEmailDefault">نامشخص</string>
    <string name="AuthBirthday">تاریخ تولد</string>
    <string name="AuthBirthdayDefault">1400-01-01</string>
    <string name="AuthMain">خانه</string>
    <string name="AuthSample">نمونه</string>
    <string name="AuthSamples">نمونه‌ها</string>
    <string name="AuthScales">ارزیابی‌ها</string>
    <string name="AuthDocuments">اسناد و مدارک</string>
    <string name="AuthTreatment">درمان</string>
    <string name="AuthCenters">مراکز درمان</string>
    <string name="AuthSessions">جلسات درمان</string>
    <string name="AuthRooms">اتاق‌های درمان</string>
    <string name="AuthCases">پرونده‌های درمان</string>
    <string name="AuthHeader">ریسلو</string>
    <string name="AuthFooter">مطالب دیگر</string>
    <string name="SerialTitle">ورود</string>
    <string name="MobileDescription">شماره همراه خود را وارد کنید.</string>
    <string name="MobileHint">شماره همراه</string>
    <string name="MobileButton">بررسی</string>
    <string name="PinDescription">کد پیامکی ارسال شده به شما را وارد کنید.</string>
    <string name="PinHint">کد 6 رقمی</string>
    <string name="PinButton">بررسی</string>
    <string name="PinTimer">کد پیامکی به شما ارسال شد :</string>
    <string name="RegisterDescription">لطفا اطلاعات و مشخصات خود را وارد کنید.</string>
    <string name="RegisterNameHint">نام و نام خانوادگی</string>
    <string name="RegisterMobileHint">شماره موبایل</string>
    <string name="RegisterManHint">مرد</string>
    <string name="RegisterWomanHint">زن</string>
    <string name="RegisterPasswordHint">رمز عبور</string>
    <string name="RegisterButton">ثبت نام</string>
</resources>