<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/tool_main"
        android:icon="@drawable/ic_home_light"
        android:title="@string/AuthMain"
        android:checked="true"
        android:checkable="true" />

    <item android:title="@string/AuthSample">
        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/tool_samples"
                    android:icon="@drawable/ic_flask_light"
                    android:title="@string/AuthSamples"/>
                <item
                    android:id="@+id/tool_scales"
                    android:icon="@drawable/ic_ruler_light"
                    android:title="@string/AuthScales"/>
            </group>
        </menu>
    </item>

    <item android:title="@string/AuthTreatment">
        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/tool_centers"
                    android:icon="@drawable/ic_hospital_light"
                    android:title="@string/AuthCenters"/>
                <item
                    android:id="@+id/tool_sessions"
                    android:icon="@drawable/ic_stethoscope_light"
                    android:title="@string/AuthSessions"/>
                <item
                    android:id="@+id/tool_rooms"
                    android:icon="@drawable/ic_room_light"
                    android:title="@string/AuthRooms"/>
                <item
                    android:id="@+id/tool_cases"
                    android:icon="@drawable/ic_case_light"
                    android:title="@string/AuthCases"/>
            </group>
        </menu>
    </item>

</menu>