<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/intro_four"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/_24sdp"
    android:paddingLeft="@dimen/_32sdp"
    android:paddingRight="@dimen/_32sdp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Views.Activities.IntroActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_160sdp"
        android:layout_marginBottom="@dimen/_32sdp"
        android:contentDescription="@string/AppImageContent"
        android:scaleType="fitCenter"
        android:src="@drawable/illu_guide" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_12sdp"
        android:gravity="center"
        android:text="@string/IntroTitleFour"
        android:textSize="@dimen/_17ssp"
        android:textStyle="bold"
        android:textColor="@color/Gray900"
        android:textAlignment="gravity" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/_12sdp"
        android:paddingRight="@dimen/_12sdp"
        android:gravity="center"
        android:maxLines="3"
        android:lines="3"
        android:text="@string/IntroDescriptionFour"
        android:textSize="@dimen/_12ssp"
        android:textStyle="normal"
        android:textColor="@color/Gray700"
        android:textAlignment="gravity" />

</LinearLayout>