<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_outro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:layoutDirection="rtl"
    android:focusable="true"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="true"
    android:descendantFocusability="blocksDescendants"
    tools:context=".Views.Activities.OutroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/_24sdp"
        android:layout_marginRight="@dimen/_24sdp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/activity_outro_title_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp"
            android:gravity="center"
            android:text="@string/OutroTitle"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            android:textColor="@color/Gray900"
            android:textAlignment="gravity" />

        <TextView
            android:id="@+id/activity_outro_description_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_32sdp"
            android:gravity="center"
            android:text="@string/OutroDescription"
            android:textSize="@dimen/_12ssp"
            android:textStyle="normal"
            android:textColor="@color/Gray700"
            android:textAlignment="gravity" />

        <Button
            android:id="@+id/activity_outro_internet_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_36sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:gravity="center"
            android:text="@string/OutroInternet"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            android:textColor="@color/White"
            android:textAlignment="gravity"
            android:background="@drawable/draw_16sdp_solid_primary"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/activity_outro_sms_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_36sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:gravity="center"
            android:text="@string/OutroSMS"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            android:textColor="@color/White"
            android:textAlignment="gravity"
            android:background="@drawable/draw_16sdp_solid_primary"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/activity_outro_download_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_36sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:gravity="center"
            android:text="@string/OutroDownload"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            android:textColor="@color/Gray700"
            android:textAlignment="gravity"
            android:background="@drawable/draw_16sdp_solid_solitude"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/activity_outro_later_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_36sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:gravity="center"
            android:text="@string/OutroLater"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            android:textColor="@color/Gray700"
            android:textAlignment="gravity"
            android:background="@drawable/draw_16sdp_solid_solitude"
            style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_gravity="bottom"
        android:background="@color/Gray200" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>