<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_mobile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:background="@null"
    tools:context=".Views.Fragments.MobileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_24sdp"
        android:layout_marginRight="@dimen/_24sdp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_24sdp"
            android:gravity="center"
            android:text="@string/MobileDescription"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            android:textColor="@color/Grey"
            android:textAlignment="gravity" />

        <EditText
            android:id="@+id/fragment_mobile_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_12sdp"
            android:paddingTop="@dimen/_8sdp"
            android:paddingBottom="@dimen/_8sdp"
            android:paddingLeft="@dimen/_16sdp"
            android:paddingRight="@dimen/_16sdp"
            android:inputType="number"
            android:maxLength="11"
            android:gravity="center"
            android:hint="@string/MobileHint"
            android:textSize="@dimen/_12ssp"
            android:textStyle="normal"
            android:textColor="@color/Grey"
            android:textColorHint="@color/Mischka"
            android:textAlignment="gravity"
            android:background="@drawable/draw_18sdp_quartz_border" />

        <Button
            android:id="@+id/fragment_mobile_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_4sdp"
            android:paddingBottom="@dimen/_4sdp"
            android:gravity="center"
            android:text="@string/MobileButton"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            android:textColor="@color/White"
            android:textAlignment="gravity"
            android:background="@drawable/draw_18sdp_primary"
            style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>

</FrameLayout>